--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,20 @@
 {
+    "ChangeVideoProfilePicture": {},
+    "ChangeVideoProfilevid": {},
     "Picture": false,
     "autoJoinTicket": false,
+    "changeCover": false,
     "changePicture": false,
+    "changeProfileVideo": false,
     "group": {},
     "groupPicture": false,
+    "myProfile": {
+        "coverId": "",
+        "displayName": "",
+        "pictureStatus": "",
+        "statusMessage": ""
+    },
+    "smule": "",
     "userAgent": [
         "Mozilla/5.0 (X11; U; Linux i586; de; rv:5.0) Gecko/20100101 Firefox/5.0",
         "Mozilla/5.0 (X11; U; Linux amd64; rv:5.0) Gecko/20100101 Firefox/5.0 (Debian)",
